# transcriber

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: block_env_writes.py  format_python.py  scrub_hf_token.py
.github/workflows/: lint.yml
notebooks/: transcribe_colab.ipynb
samples/: README.md
src/transcriber/: __init__.py  __main__.py  audio.py  cli.py  config.py  output.py  pipeline.py
